--- a/XamarinATime/XamarinATime.csproj
+++ b/XamarinATime/XamarinATime.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AboutFragment.cs" />
+    <Compile Include="ConfigurationActivity.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
