--- a/XamarinATime/XamarinATime.csproj
+++ b/XamarinATime/XamarinATime.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="AboutFragment.cs" />
     <Compile Include="ConfigurationActivity.cs" />
+    <Compile Include="FindMyLocation.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,6 +69,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\configuration.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\FindMyLocation.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
